--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="#page2" class="green">About me</a>
           <a href="#page3">My skills</a>
           <a href="#page4">My Projects</a>
-          <a href="./pic/CV-Afaf.Suleiman.pdf" download="CV.pdf">CV</a>
+          <a href="./pic/CV Afaf.Suleiman.pdf" download="CV.pdf">CV</a>
           <a href="#page5">Contact</a>
           <i class="fa fa-close" onclick="closeMenu()"></i>
         </div>
@@ -71,21 +71,20 @@
           Kodehode, where I enhanced my skills in HTML, CSS, JavaScript, React,
           Node.js, and Figma. It was a rewarding experience to refresh my
           knowledge and delve into new technologies.
-          <br /><br />
+          <br />
+          <br />
           As a front end developer, I thrive on creating user-friendly websites
-          that prioritize both functionality and visual appeal. I enjoy the
-          challenge of finding the perfect balance between usability and design,
-          ensuring that every website I work on is intuitive and engaging for
-          users.
-          <br /><br />
+          that prioritize both functionality and visual appeal.Ensuring that
+          every website I work on is intuitive and engaging for users.
+          <br />
+          <br />
           When I'm not coding, you can find me outdoors, taking walks in nature.
           I find peace and rejuvenation in the tranquility of natural
           landscapes, and these moments allow me to recharge and clear my mind.
-          <br /><br />
-          Continuous learning is important to me, and I am constantly looking
-          for opportunities to expand my knowledge and skills. Whether through
-          online courses, workshops, or personal projects, I am committed to
-          growing as a developer and as an individual.
+          <br />
+          <br />
+          Besides,Continuous learning is important to me, and I am constantly
+          looking for opportunities to expand my knowledge and skills.
         </p>
 
         <img src="./pic/RightImage.png" />
@@ -240,7 +239,7 @@
         </div>
         <div>
           <button>
-            <a href="./pic/CV-Afaf.Suleiman.pdf" download>Download my CV</a>
+            <a href="./pic/CV Afaf.Suleiman.pdf" download>Download my CV</a>
           </button>
         </div>
       </div>
