--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="between-side1-grid">
         <img src="./pic/t-left.png" />
         <img src="./pic/t-left.png" />
-        <div>Fresh End Developer</div>
+        <div>Fresh Front-End Developer</div>
         <img src="./pic/t-left.png" />
         <img src="./pic/t-left.png" />
       </div>
@@ -64,7 +64,7 @@
         <img src="./pic/LeftImage.png" />
         <h1>About me</h1>
         <h3>Hello, My name is <span>Afaf</span></h3>
-        <img src="./pic/MyPic.jpeg" />
+        <img src="./pic/MyPic1.jpeg" />
 
         <p>
           I recently completed a 6-month frontend programming course at
@@ -86,8 +86,11 @@
           Besides,Continuous learning is important to me, and I am constantly
           looking for opportunities to expand my knowledge and skills.
         </p>
-
         <img src="./pic/RightImage.png" />
+
+        <button>
+          <a href="./pic/CV Afaf.Suleiman.pdf" download>Download my CV</a>
+        </button>
       </div>
     </section>
 
@@ -104,6 +107,7 @@
     </div>
 
     <section class="page3" id="page3">
+      <!-- <img src="./pic/background-Skills.png" /> -->
       <div class="page3-grid">
         <img src="./pic/LeftImage.png" />
         <h1>My skills</h1>
@@ -135,7 +139,7 @@
         <!-- Full-width images with number and caption text -->
 
         <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
+          <div class="numbertext">1 / 5</div>
           <img src="./pic/Drum-Machine.png" />
           <!-- <div class="text">First Project</div> -->
           <div class="btn-flex">
@@ -144,16 +148,19 @@
               <label>CSS</label>
             </div>
             <button>
+              <a href="">Repository</a>
+            </button>
+            <button>
               <a
                 href="https://kodehode-stavanger.github.io/javascript-advanced-project-drum-machine-Afaf56/"
-                >Explore More →</a
+                >Live Host Page →</a
               >
             </button>
           </div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
+          <div class="numbertext">2 / 5</div>
           <img src="./pic/javaApi.png" />
           <!-- <div class="text">Second project</div> -->
           <div class="btn-flex">
@@ -162,16 +169,19 @@
               <label>CSS</label>
             </div>
             <button>
+              <a href="">Repository</a>
+            </button>
+            <button>
               <a
                 href="https://kodehode-stavanger.github.io/javascript-advanced-project-api-Afaf56/"
-                >Explore More →</a
+                >Live Host Page →</a
               >
             </button>
           </div>
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
+          <div class="numbertext">3 / 5</div>
           <img src="./pic/figma-project.png" />
           <!-- <div class="text">Third Project</div> -->
           <div class="btn-flex">
@@ -179,9 +189,54 @@
               <label>FIGMA</label>
             </div>
             <button>
+              <a href="">Repository</a>
+            </button>
+            <button>
               <a
                 href="https://www.figma.com/file/wcXi3th0UoALEFzG5cEWal/Project-(Copy)?type=design&node-id=0-1&mode=design&t=p1VTmmm1sHO8FboM-0"
-                >Explore More →</a
+                >Live Host Page →</a
+              >
+            </button>
+          </div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">4 / 5</div>
+          <img src="./pic/javaApi.png" />
+          <!-- <div class="text">Second project</div> -->
+          <div class="btn-flex">
+            <div class="info-project-flex">
+              <label>JS</label>
+              <label>CSS</label>
+            </div>
+            <button>
+              <a href="">Repository</a>
+            </button>
+            <button>
+              <a
+                href="https://kodehode-stavanger.github.io/javascript-advanced-project-api-Afaf56/"
+                >Live Host Page →</a
+              >
+            </button>
+          </div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">5 / 5</div>
+          <img src="./pic/javaApi.png" />
+          <!-- <div class="text">Second project</div> -->
+          <div class="btn-flex">
+            <div class="info-project-flex">
+              <label>JS</label>
+              <label>CSS</label>
+            </div>
+            <button>
+              <a href="">Repository</a>
+            </button>
+            <button>
+              <a
+                href="https://kodehode-stavanger.github.io/javascript-advanced-project-api-Afaf56/"
+                >Live Host Page →</a
               >
             </button>
           </div>
@@ -205,8 +260,9 @@
         <h1>Contact Me</h1>
 
         <form
-          name="submit-to-google-sheet"
-          action="https://script.google.com/macros/s/AKfycbyrQfRyz3soXVfhTHbf9yDOzTH_mQThS-vaH-44BC54CPpErZTFOrEdIR2hZjHM_MRF/exec"
+          action="https://formsubmit.co/afaf56.kodehode@gmail.com"
+          method="POST"
+          target="_blank"
         >
           <div class="contact-details">
             <input type="text" name="name" placeholder="Your Name" required />
