--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="#page2" class="green">About me</a>
           <a href="#page3">My skills</a>
           <a href="#page4">My Projects</a>
-          <a href="./pic/CV Afaf.Suleiman.pdf" download="CV.pdf">CV</a>
+          <a href="./pic/CV.pdf" download="CV.pdf">CV</a>
           <a href="#page5">Contact</a>
           <i class="fa fa-close" onclick="closeMenu()"></i>
         </div>
@@ -61,7 +61,7 @@
     </div>
     <section class="page2" id="page2">
       <div class="page2-grid">
-        <img src="./pic/LeftImage.png" />
+        <img src="./pic/LeftImage.png" class="square" />
         <h1>About me</h1>
         <h3>Hello, My name is <span>Afaf</span></h3>
         <img src="./pic/MyPic1.jpeg" />
@@ -86,10 +86,10 @@
           Besides,Continuous learning is important to me, and I am constantly
           looking for opportunities to expand my knowledge and skills.
         </p>
-        <img src="./pic/RightImage.png" />
+        <img src="./pic/RightImage.png" class="square" />
 
         <button>
-          <a href="./pic/CV Afaf.Suleiman.pdf" download>Download my CV</a>
+          <a href="./pic/CV.pdf" download>Download my CV</a>
         </button>
       </div>
     </section>
@@ -148,7 +148,10 @@
               <label>CSS</label>
             </div>
             <button>
-              <a href="">Repository</a>
+              <a
+                href="https://github.com/Kodehode-Stavanger/javascript-advanced-project-drum-machine-Afaf56.git"
+                >Repository</a
+              >
             </button>
             <button>
               <a
@@ -169,7 +172,10 @@
               <label>CSS</label>
             </div>
             <button>
-              <a href="">Repository</a>
+              <a
+                href="https://github.com/Kodehode-Stavanger/javascript-advanced-project-api-Afaf56.git"
+                >Repository</a
+              >
             </button>
             <button>
               <a
@@ -188,9 +194,9 @@
             <div class="info-project-flex">
               <label>FIGMA</label>
             </div>
-            <button>
+            <!-- <button>
               <a href="">Repository</a>
-            </button>
+            </button> -->
             <button>
               <a
                 href="https://www.figma.com/file/wcXi3th0UoALEFzG5cEWal/Project-(Copy)?type=design&node-id=0-1&mode=design&t=p1VTmmm1sHO8FboM-0"
@@ -202,7 +208,7 @@
 
         <div class="mySlides fade">
           <div class="numbertext">4 / 5</div>
-          <img src="./pic/javaApi.png" />
+          <img src="./pic/project 4.png" />
           <!-- <div class="text">Second project</div> -->
           <div class="btn-flex">
             <div class="info-project-flex">
@@ -210,11 +216,12 @@
               <label>CSS</label>
             </div>
             <button>
-              <a href="">Repository</a>
+              <a href="https://github.com/Afaf56/javascript-homework.git"
+                >Repository</a
+              >
             </button>
             <button>
-              <a
-                href="https://kodehode-stavanger.github.io/javascript-advanced-project-api-Afaf56/"
+              <a href="https://afaf56.github.io/javascript-homework/"
                 >Live Host Page →</a
               >
             </button>
@@ -223,7 +230,7 @@
 
         <div class="mySlides fade">
           <div class="numbertext">5 / 5</div>
-          <img src="./pic/javaApi.png" />
+          <img src="./pic/grid.png" />
           <!-- <div class="text">Second project</div> -->
           <div class="btn-flex">
             <div class="info-project-flex">
@@ -231,11 +238,14 @@
               <label>CSS</label>
             </div>
             <button>
-              <a href="">Repository</a>
+              <a
+                href="https://github.com/Kodehode-Stavanger/modul-b-final-assignment-Afaf56.git"
+                >Repository</a
+              >
             </button>
             <button>
               <a
-                href="https://kodehode-stavanger.github.io/javascript-advanced-project-api-Afaf56/"
+                href="https://kodehode-stavanger.github.io/modul-b-final-assignment-Afaf56/"
                 >Live Host Page →</a
               >
             </button>
@@ -295,7 +305,7 @@
         </div>
         <div>
           <button>
-            <a href="./pic/CV Afaf.Suleiman.pdf" download>Download my CV</a>
+            <a href="./pic/CV.pdf" download>Download my CV</a>
           </button>
         </div>
       </div>
