update figma url

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </button> -->
             <button>
               <a
-                href="https://www.figma.com/file/wcXi3th0UoALEFzG5cEWal/Project-(Copy)?type=design&node-id=0-1&mode=design&t=p1VTmmm1sHO8FboM-0"
+                href="https://www.figma.com/proto/wcXi3th0UoALEFzG5cEWal/Project-(Copy)?type=design&node-id=7-30&t=Y2dHKXIr6PkExtrC-0&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=7%3A30"
                 >Live Host Page →</a
               >
             </button>
