--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
     <section class="page3" id="page3">
       <!-- <img src="./pic/background-Skills.png" /> -->
       <div class="page3-grid">
-        <img src="./pic/LeftImage.png" />
+        <!-- <img src="./pic/Left1Image.png" /> -->
+        <div></div>
         <h1>My skills</h1>
 
         <img src="./pic/css.png" />
@@ -127,7 +128,7 @@
         <img src="./pic/javascript.png" />
         <label for="">JavaScript</label>
 
-        <img src="./pic/RightImage.png" />
+        <div></div>
       </div>
     </section>
     <div class="between-side3"></div>
