--- a/index.html
+++ b/index.html
@@ -138,9 +138,29 @@
 
       <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
+        
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 6</div>
+          <img src="./pic/Tento.png" />
+          <!-- <div class="text">Third Project</div> -->
+          <div class="btn-flex">
+            <div class="info-project-flex">
+              <label>FIGMA</label>
+            </div>
+            <!-- <button>
+              <a href="">Repository</a>
+            </button> -->
+            <button>
+              <a
+                href="https://www.figma.com/proto/s5zbZVMUdDl6QQw3iihAKt/whole-DropDownList-to-left-2?node-id=1-2&starting-point-node-id=1%3A2&t=m7C2xawQeCwM79uf-1"
+                >Live Host Page →</a
+              >
+            </button>
+          </div>
+        </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">1 / 5</div>
+          <div class="numbertext">2 / 6</div>
           <img src="./pic/Drum-Machine.png" />
           <!-- <div class="text">First Project</div> -->
           <div class="btn-flex">
@@ -164,7 +184,7 @@
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">2 / 5</div>
+          <div class="numbertext">3 / 6</div>
           <img src="./pic/javaApi.png" />
           <!-- <div class="text">Second project</div> -->
           <div class="btn-flex">
@@ -188,7 +208,7 @@
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">3 / 5</div>
+          <div class="numbertext">4 / 6</div>
           <img src="./pic/figma-project.png" />
           <!-- <div class="text">Third Project</div> -->
           <div class="btn-flex">
@@ -208,7 +228,7 @@
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">4 / 5</div>
+          <div class="numbertext">5 / 6</div>
           <img src="./pic/project 4.png" />
           <!-- <div class="text">Second project</div> -->
           <div class="btn-flex">
@@ -230,7 +250,7 @@
         </div>
 
         <div class="mySlides fade">
-          <div class="numbertext">5 / 5</div>
+          <div class="numbertext">6 / 6</div>
           <img src="./pic/grid.png" />
           <!-- <div class="text">Second project</div> -->
           <div class="btn-flex">
